# remind

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS  COPYRIGHT  MANIFEST.DOS  MANIFEST.UNX  MICROSOFT-AND-APPLE  Makefile  Makefile_QDOS  README  README.AMIGA  README.BCC  README.DOS  README.OS2  README.UNIX  README.md  README_QDOS  WHATSNEW.30  WINDOWS  amiga.c  build.tk  calendar.c  config.h  configure  configure.in  danish.h  defs.rem  dorem.c  dosubst.c  dutch.h  english.h  err.h  expr.c  expr.h  files.c  finnish.h  french.h  funcs.c  german.h  globals.c  (+56 more)
.github/: README.md
.github/workflows/: github-action.yml
contrib/: README  ical2rem.pl
contrib/rem2ics-0.93/: Makefile  rem2ics  rem2ics.spec
contrib/remind-conf-mode/: README  ac-remind.el  remind-conf-mode.el
contrib/remind-conf-mode.06/: remind-conf-mode.el
docs/: README.AMIGA  README.BCC  README.DOS  README.OS2  README.UNIX  README_QDOS  WHATSNEW  WHATSNEW.30
examples/: defs.rem  remind.vim
include/holidays/: ca.rem  us.rem
include/lang/: auto.rem  da.rem  de.rem  en.rem  es.rem  fi.rem  fr.rem  is.rem  it.rem  nl.rem  no.rem  pl.rem  pt.rem  ro.rem
include/site/: README
man/: cm2rem.1  kall.1  rem.1  rem2ps.1  remind.1  tkremind.1
rem2html/: Makefile.in  README.rem2html  rem2html
rem2pdf/: Makefile.PL.in  Makefile.top.in  README
rem2pdf/lib/Remind/: PDF.pm
rem2pdf/lib/Remind/PDF/: Entry.pm  Month.pm
scripts/: README  cm2rem.tcl  kall  rem  remind-all.csh  remind-all.sh  tkremind
src/: Makefile  Makefile.in  Makefile_QDOS  amiga.c  calendar.c  compare-language-mods.pl  config.h.in  custom.h  custom.h.in  dorem.c  dosubst.c  dynbuf.c  dynbuf.h  err.h  expr.c  expr.h  files.c  funcs.c  globals.c  globals.h  hbcal.c  init.c  json.c  json.h  lang.h  lnk.bcc  lnk.msc  main.c  makefile.bcc  makefile.msc  makefile.os2  makefile.tc  moon.c  omit.c  os2func.c  protos.h  queue.c  rem2ps.c  rem2ps.h  smakefile  (+9 more)
src/OBSOLETE/: Makefile_QDOS  amiga-SCOPTIONS  amiga.c  makefile.bcc  makefile.msc  makefile.os2  makefile.tc  os2func.c  smakefile
src/langs/: danish.h  dutch.h  english.h  finnish.h  french.h  german.h  icelandic.h  italian.h  norwgian.h  polish.h  portbr.h  romanian.h  spanish.h
tests/: colors.rem  file.ps  file2.ps  include_test.rem  runinc.rem  runtest.rem  scripts.rem  shade.rem  sun.rem  test-addomit.rem  test-for-backends.rem  test-rem  test-rem.ami  test-rem.bat  test-rem.cmd  test-rem.rexx  test.cmp  test.rem  test1.cmp  test2.cmp  test2.rem  test3.rem  tstlang.rem  utf-8.rem
tests/include_dir/: 01.rem  02.rem  03.notrem  04cantread.rem
tests/include_dir/subdir/: 04.rem
tests/purge_dir/: f1.rem  f2.rem  f3.rem
www/: Makefile  Makefile.in  README  README.rem2html  blank.rem  cal_dispatch-DIST  calendar.html-DIST  calps  hebdate  hebdate.rem-DIST  hebhtml  hebps  moon  moon.rem-DIST  rem-default.css  rem2html  sunrise  sunrise.rem-DIST  sunset  sunset.rem-DIST
www/php/: remind.php
